--- a/src/app/visitor/features/visitor-list/visitor-list.component.html
+++ b/src/app/visitor/features/visitor-list/visitor-list.component.html
@@ -28,23 +28,44 @@
     <app-table [items]="visitors" [columns]="columns" [isLoading]="isLoading"></app-table>
 </div>-->
 
-
 <div class="container mt-4">
     <p class="h2 m-3">Lista de Visitantes</p>
 
-    <app-table
-     [items]="visitors"
-     [columns]="columns" 
-     [isLoading]="isLoading"
-     [pagination]="{
-       totalItems: totalItems,
-       page: page,
-       size: size,
-       onPageChange: onPageChange,
-       onPageSizeChange: onPageSizeChange}"
-       [height]="'450px'"
-       [showExportOptions]="false"
-       (searchValueChange)="onFilterChange($event)">
-       </app-table>
+    <app-table [items]="visitors" [columns]="columns" [isLoading]="isLoading" [pagination]="{
+      totalItems: totalItems,
+      page: page,
+      size: size,
+      onPageChange: onPageChange,
+      onPageSizeChange: onPageSizeChange
+    }" [height]="'450px'" (searchValueChange)="onFilterChange($event)">
+        <!-- Template para la columna de acciones -->
+        <ng-template #actionsTemplate let-item>
+            <!-- Botones visibles en pantallas medianas y grandes -->
+            <div class="d-none d-md-flex">
+                <button class="btn btn-warning btn-sm me-2" (click)="editVisitor(item.visitor_id)">
+                    Editar
+                </button>
+                <button class="btn btn-danger btn-sm" (click)="deleteVisitor(item.visitor_id)">
+                    Eliminar
+                </button>
+            </div>
 
+            <!-- Botones visibles solo en pantallas pequeñas -->
+            <div class="d-md-none" ngbDropdown>
+                <button class="btn" type="button" id="dropdownMenuButton2"  aria-expanded="false">
+                    <i class="bi bi-three-dots-vertical" ngbDropdownToggle aria-expanded="false"></i> <!-- Mantenemos solo el ícono -->
+                </button>
+
+                <div ngbDropdownMenu class="dropdown-menu-dark" aria-labelledby="dropdownMenuButton2">
+                    <button class="dropdown-item" (click)="editVisitor(item.visitor_id)">
+                        Editar
+                    </button>
+                    <button class="dropdown-item text-white" (click)="deleteVisitor(item.visitor_id)">
+                        Eliminar
+                    </button>
+                </div>
+            </div>
+        </ng-template>
+
+    </app-table>
 </div>
