--- a/src/app/qr/features/qr-form/qr-form.component.html
+++ b/src/app/qr/features/qr-form/qr-form.component.html
@@ -1,15 +1,28 @@
-<div class="container mt-4">
-    <h2>Generar Código QR</h2>
+<div class="d-flex justify-content-center align-items-center vh-100" style="background-color: #000000;">
+    <div class="card p-4 m-3" style="width: 400px; border-radius: 15px;">
+        <h4 class="text-center mb-4">Generar Código QR</h4>
 
-    <div class="form-group mb-3">
-        <label for="docNumber">Número de Documento</label>
-        <input type="number" class="form-control" [(ngModel)]="docNumber" placeholder="Ingrese el número de documento">
-    </div>
+        <div class="form-group mb-3">
+            <label for="docNumber" class="form-label">Número de Documento</label>
+            <input type="number" class="form-control" id="docNumber" [(ngModel)]="docNumber"
+                placeholder="Ingrese el número de documento">
+        </div>
 
-    <button class="btn btn-primary mb-3" (click)="generateQr()">Generar QR</button>
+        <div class="d-grid gap-2">
+            <button class="btn btn-warning py-2" (click)="generateQr()">Generar QR</button>
+        </div>
 
-    <div *ngIf="qrImageSrc">
-        <h3>Código QR:</h3>
-        <img [src]="qrImageSrc" alt="Código QR">
+        @if (qrImageSrc) {
+        <div class="text-center mt-4">
+            <h5 class="mb-3">Código QR:</h5>
+            <img [src]="qrImageSrc" alt="Código QR" style="max-width: 100%;">
+        </div>
+        }
+
+        @if (fromVisitorForm) {
+        <div class="d-grid gap-2 mt-4">
+            <button class="btn btn-secondary py-2" routerLink="/visitors">Ir a lista de visitantes</button>
+        </div>
+        }
     </div>
 </div>
